changed rtdemo service to an IntentService, RTDemoService is now created and destroyed for each Intent delivered, added logging to the local disk, added wake_lock, had to push context deep into pump manager etc, I hope to remove it soon

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gxwtech.rtdemo" >
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <!--
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -15,6 +17,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -33,11 +36,12 @@
         </activity>
 
         <service
-            android:name=".Services.RTDemoService"
+            android:name="com.gxwtech.rtdemo.Services.RTDemoService"
             android:enabled="true"
             android:exported="true" >
             <intent-filter>
                 <action android:name="com.eveningoutpost.dexdrip.BgEstimate" />
+                <action android:name="com.gxwtech.rtdemo.Services.RTDemoService" />
             </intent-filter>
         </service>
 
