--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,7 @@
 /build/
 /app/build/
 /app/.idea/
-/app/build/generated
-/app/build/outputs/logs/manifest-merger-debug-report.txt
+/app/build/*
 
 /.idea/*
 *.iml
