--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,10 +39,11 @@ android {
         versionCode getVersionCode()
         versionName getVersionName()
     }
+
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-Rurules.pro'
         }
     }
 }
@@ -55,6 +56,12 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3'
     compile 'joda-time:joda-time:2.5'
     compile 'com.android.support:support-v4:22.2.1'
+    compile 'com.google.protobuf:protobuf-java:2.6.1'
+
+    compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.0.2'
+
+
+    testCompile 'org.json:json:20140107'
 
     // Based on https://developer.android.com/training/testing/unit-testing/local-unit-tests.html
     testCompile 'junit:junit:4.12'
@@ -63,3 +70,4 @@ dependencies {
     // Set this dependency if you want to use Hamcrest matching
     androidTestCompile 'org.hamcrest:hamcrest-library:1.1'
 }
+
