--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,10 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.2.3'
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -15,5 +15,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+
+        maven { url 'https://repo.eclipse.org/content/repositories/paho-releases/' }
     }
 }
