Working on calibration algorithm

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3'
     compile 'joda-time:joda-time:2.5'
     compile 'com.google.protobuf:protobuf-java:2.6.1'
+    compile 'org.apache.commons:commons-math3:3.5'
+    compile 'org.apache.commons:commons-collections4:4.0'
 
     compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.0.2'
 
