--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-Rurules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
+    }
 }
 
 dependencies {
@@ -66,4 +79,3 @@ dependencies {
     // Based on https://developer.android.com/training/testing/unit-testing/local-unit-tests.html
     testCompile 'junit:junit:4.12'
 }
-
