Removed Mongo support, replaced with nightscout/cgm-remote-monitor REST API support

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,7 +70,7 @@
                 android:value="com.gxwtech.rtdemo.MainActivity" />
         </activity>
         <activity
-            android:name=".MongoDBSettingsActivity"
+            android:name=".RestV1SettingsActivity"
             android:label="@string/title_activity_mongo_dbsettings"
             android:parentActivityName=".RTDemoSettingsActivity" >
             <meta-data
